content/nomad/v1.11.x/content/commands/acl/index.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: 'nomad acl command reference'
description: |
  The `nomad acl` command interacts with access control list (ACL) policies, roles, tokens, binding rules, and authentication methods.
---

# `nomad acl` command reference

The `acl` command is used to interact with ACL policies and tokens. Learn more
about using Nomad's ACL system in the [Secure Nomad with Access Control
guide][secure-guide].

In [federated][] clusters, all ACL updates are forwarded to the
[`authoritative_region`][] and replicated to non-authoritative regions. This
requires that ACLs have been bootstrapped in the authoritative region.

## Usage

```plaintext
nomad acl <subcommand> [options]
```

Run `nomad acl <subcommand> -h` for help on that subcommand. The following
subcommands are available:

- [`acl bootstrap`][bootstrap] - Bootstrap the initial ACL token
- [`acl auth-method create`][authmethodcreate] - Create a new ACL auth method
- [`acl auth-method delete`][authmethoddelete] - Delete an existing ACL auth method
- [`acl auth-method info`][authmethodinfo] - Fetch information on an existing ACL auth method
- [`acl auth-method list`][authmethodlist] - List available ACL auth methods
- [`acl auth-method update`][authmethodupdate] - Update existing ACL auth method
- [`acl binding-rule create`][bindingrulecreate] - Create a new ACL binding rule
- [`acl binding-rule delete`][bindingruledelete] - Delete an existing ACL binding rule
- [`acl binding-rule info`][bindingruleinfo] - Fetch information on an existing ACL binding rule
- [`acl binding-rule list`][bindingrulelist] - List available ACL binding rules
- [`acl binding-rule update`][bindingruleupdate] - Update existing ACL binding rule
- [`acl policy apply`][policyapply] - Create or update ACL policies
- [`acl policy delete`][policydelete] - Delete an existing ACL policies
- [`acl policy info`][policyinfo] - Fetch information on an existing ACL policy
- [`acl policy list`][policylist] - List available ACL policies
- [`acl policy self`][policyself] - List ACL policies attached to the current workload
- [`acl role create`][rolecreate] - Create a new ACL role
- [`acl role delete`][roledelete] - Delete an existing ACL role
- [`acl role info`][roleinfo] - Get info on an existing ACL role
- [`acl role list`][rolelist] - List available ACL roles
- [`acl role update`][roleupdate] - Update existing ACL role
- [`acl token create`][tokencreate] - Create new ACL token
- [`acl token delete`][tokendelete] - Delete an existing ACL token
- [`acl token info`][tokeninfo] - Get info on an existing ACL token
- [`acl token list`][tokenlist] - List available ACL tokens
- [`acl token self`][tokenself] - Get info on self ACL token
- [`acl token update`][tokenupdate] - Update existing ACL token

[bootstrap]: /nomad/commands/acl/bootstrap
[authmethodcreate]: /nomad/commands/acl/auth-method/create
[authmethoddelete]: /nomad/commands/acl/auth-method/delete
[authmethodinfo]: /nomad/commands/acl/auth-method/info
[authmethodlist]: /nomad/commands/acl/auth-method/list
[authmethodupdate]: /nomad/commands/acl/auth-method/update
[bindingrulecreate]: /nomad/commands/acl/binding-rule/create
[bindingruledelete]: /nomad/commands/acl/binding-rule/delete
[bindingruleinfo]: /nomad/commands/acl/binding-rule/info
[bindingrulelist]: /nomad/commands/acl/binding-rule/list
[bindingruleupdate]: /nomad/commands/acl/binding-rule/update
[policyapply]: /nomad/commands/acl/policy/apply
[policydelete]: /nomad/commands/acl/policy/delete
[policyinfo]: /nomad/commands/acl/policy/info
[policylist]: /nomad/commands/acl/policy/list
[policyself]: /nomad/commands/acl/policy/self
[tokencreate]: /nomad/commands/acl/token/create
[tokenupdate]: /nomad/commands/acl/token/update
[tokendelete]: /nomad/commands/acl/token/delete
[tokeninfo]: /nomad/commands/acl/token/info
[tokenlist]: /nomad/commands/acl/token/list
[tokenself]: /nomad/commands/acl/token/self
[rolecreate]: /nomad/commands/acl/role/create
[roleupdate]: /nomad/commands/acl/role/update
[roledelete]: /nomad/commands/acl/role/delete
[roleinfo]: /nomad/commands/acl/role/info
[rolelist]: /nomad/commands/acl/role/list
[secure-guide]: /nomad/docs/secure/acl
[federated]: /nomad/docs/deploy/clusters/federate-regions
[`authoritative_region`]: /nomad/docs/configuration/server#authoritative_region
